--- a/CPP07/ex02/Makefile
+++ b/CPP07/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/02/02 08:41:41 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/03 16:01:46 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= iter
+NAME	= array
 
 CC		= c++
 CFLAGS	= #-g -fsanitize=address
