--- a/CPP08/ex01/Makefile
+++ b/CPP08/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/02/04 10:34:27 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/04 11:31:28 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,7 @@ RM		= rm -rf
 BLUE	= \033[94m
 RESET	= \033[0m
 
-SRC		= main.cpp
+SRC		= main.cpp Span.cpp
 #OBJ	= $(SRC:.cpp=.o)
 
 all: $(NAME)
