auto add & push

--- a/CPP07/ex02/Makefile
+++ b/CPP07/ex02/Makefile
@@ -6,26 +6,25 @@
 #    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/02/03 16:01:46 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/05 10:40:10 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	= array
 
 CC		= c++
-CFLAGS	= #-g -fsanitize=address
+CFLAGS	= 
 EFLAGS	= -Wall -Wextra -Werror -pedantic -std=c++98
 RM		= rm -rf
 
-BLUE	= \033[94m
+BLUE	= \033[30m
 RESET	= \033[0m
 
 SRC		= main.cpp
-#OBJ	= $(SRC:.cpp=.o)
 
 all: $(NAME)
 
-$(NAME): #$(OBJ)
+$(NAME):
 	@$(CC) $(CFLAGS) $(EFLAGS) $(SRC) -o $(NAME)
 	@echo "$(BLUE)$(NAME) compiled.$(RESET)"
 
@@ -50,5 +49,4 @@ mgit:
 	git commit -m "$$halp"
 	git push
 	@echo "$(BLUE)git auto add & push with message performed.$(RESET)"
-
-#.SILENT: $(OBJ)
+	
