Formatting changes Makefile

--- a/CPP03/ex01/Makefile
+++ b/CPP03/ex01/Makefile
@@ -3,35 +3,33 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: wmardin <wmardin@student.42wolfsburg.de>   +#+  +:+       +#+         #
+#    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/01/15 15:26:25 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/05 10:54:58 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	= scavdattrap
 
 CC		= c++
-CFLAGS	= #-g -fsanitize=address
-EFLAGS	= -Wall -Wextra -Werror -std=c++98
+FLAGS	= -Wall -Wextra -Werror -std=c++98
 RM		= rm -rf
 
-BLUE	= \033[94m
+COLOR	= \033[30m
 RESET	= \033[0m
 
 SRC		= main.cpp ClapTrap.cpp ScavTrap.cpp
-#OBJ	= $(SRC:.cpp=.o)
 
 all: $(NAME)
 
-$(NAME): #$(OBJ)
-	@$(CC) $(CFLAGS) $(EFLAGS) $(SRC) -o $(NAME)
-	@echo "$(BLUE)$(NAME) compiled.$(RESET)"
+$(NAME):
+	@$(CC) $(CFLAGS) $(FLAGS) $(SRC) -o $(NAME)
+	@echo "$(COLOR)$(NAME) compiled.$(RESET)"
 
 clean:
 	@$(RM) $(OBJ) obj
-	@echo "$(BLUE)$(NAME) cleaned.$(RESET)"
+	@echo "$(COLOR)$(NAME) cleaned.$(RESET)"
 
 fclean: clean
 	@$(RM) $(NAME) $(NAME).dSYM
@@ -42,13 +40,11 @@ git:
 	git add .
 	git commit -m "auto add & push"
 	git push
-	@echo "$(BLUE)git auto add & push performed.$(RESET)"
+	@echo "$(COLOR)git auto add & push performed.$(RESET)"
 
 mgit:
 	git add .
 	@read -p "Enter the commit message: " halp; \
 	git commit -m "$$halp"
 	git push
-	@echo "$(BLUE)git auto add & push with message performed.$(RESET)"
-
-#.SILENT: $(OBJ)
+	@echo "$(COLOR)git auto add & push with message performed.$(RESET)"
