--- a/CPP07/ex00/Makefile
+++ b/CPP07/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/02/05 10:44:16 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/05 10:57:57 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ CC		= c++
 FLAGS	= -Wall -Wextra -Werror -pedantic -std=c++98
 RM		= rm -rf
 
-BLUE	= \033[30m
+COLOR	= \033[30m
 RESET	= \033[0m
 
 SRC		= main.cpp
@@ -25,11 +25,11 @@ all: $(NAME)
 
 $(NAME):
 	@$(CC) $(FLAGS) $(SRC) -o $(NAME)
-	@echo "$(BLUE)$(NAME) compiled.$(RESET)"
+	@echo "$(COLOR)$(NAME) compiled.$(RESET)"
 
 clean:
 	@$(RM) $(OBJ) obj
-	@echo "$(BLUE)$(NAME) cleaned.$(RESET)"
+	@echo "$(COLOR)$(NAME) cleaned.$(RESET)"
 
 fclean: clean
 	@$(RM) $(NAME) $(NAME).dSYM
@@ -40,12 +40,12 @@ git:
 	git add .
 	git commit -m "auto add & push"
 	git push
-	@echo "$(BLUE)git auto add & push performed.$(RESET)"
+	@echo "$(COLOR)git auto add & push performed.$(RESET)"
 
 mgit:
 	git add .
 	@read -p "Enter the commit message: " halp; \
 	git commit -m "$$halp"
 	git push
-	@echo "$(BLUE)git auto add & push with message performed.$(RESET)"
+	@echo "$(COLOR)git auto add & push with message performed.$(RESET)"
 
