--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: wmardin <wmardin@student.42wolfsburg.de>   +#+  +:+       +#+         #
+#    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/01/02 18:59:22 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/05 10:55:56 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,10 +14,10 @@ NAME = phonebook
 
 CC = c++
 CFLAGS = -g -fsanitize=address
-EFLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-BLUE	= \033[94m
+COLOR	= \033[30m
 RESET	= \033[0m
 
 SRC =	main.cpp Contact.cpp PhoneBook.cpp
@@ -26,12 +26,12 @@ OBJ	=	$(SRC:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	@$(CC) $(CFLAGS) $(EFLAGS) $(OBJ) -o $(NAME)
-	@echo "$(BLUE)$(NAME) compiled.$(RESET)"
+	@$(CC) $(CFLAGS) $(FLAGS) $(OBJ) -o $(NAME)
+	@echo "$(COLOR)$(NAME) compiled.$(RESET)"
 
 clean:
 	@$(RM) $(OBJ) obj
-	@echo "$(BLUE)$(NAME) cleaned.$(RESET)"
+	@echo "$(COLOR)$(NAME) cleaned.$(RESET)"
 
 fclean: clean
 	@$(RM) $(NAME)
@@ -42,13 +42,13 @@ git:
 	git add .
 	git commit -m "auto add & push"
 	git push
-	@echo "$(BLUE)git auto add & push performed.$(RESET)"
+	@echo "$(COLOR)git auto add & push performed.$(RESET)"
 
 mgit:
 	git add .
 	@read -p "Enter the commit message: " halp; \
 	git commit -m "$$halp"
 	git push
-	@echo "$(BLUE)git auto add & push with message performed.$(RESET)"
+	@echo "$(COLOR)git auto add & push with message performed.$(RESET)"
 
 .SILENT: $(OBJ)
