--- a/CPP08/ex02/Makefile
+++ b/CPP08/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: wmardin <wmardin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 14:41:05 by wmardin           #+#    #+#              #
-#    Updated: 2023/02/05 12:15:45 by wmardin          ###   ########.fr        #
+#    Updated: 2023/02/05 17:08:11 by wmardin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ RM		= rm -rf
 COLOR	= \033[30m
 RESET	= \033[0m
 
-SRC		= main.cpp Span.cpp
+SRC		= main.cpp
 
 all: $(NAME)
 
